[workspace]
resolver = "3"
members = ["ario-core", "ario-client", "arfs", "ars3nal", "foyer-cache"]

[workspace.dependencies]
ario-client = { path = "ario-client" }
ario-core = { path = "ario-core" }
arfs = { path = "arfs" }
ars3nal = { path = "ars3nal" }
foyer-cache = { path = "foyer-cache" }

aes = "0.9.0-rc.1"
anyhow = "1"
async-stream = "0.3"
bon = "3.7"
bytes = "1"
bytesize = "2.0"
chrono = "0.4"
ctr = { version = "0.10.0-rc.1" }
derive-where = "1.6"
derive_more = "2.0"
digest = "0.11.0-rc.1"
ecdsa = "0.17.0-rc.6"
ed25519 = "3.0.0-rc.0"
ed25519-dalek = "3.0.0-pre.1"
elliptic-curve = "0.14.0-rc.13"
futures-lite = "2.6"
ghash = "0.6.0-rc.2"
hkdf = "0.13.0-rc.1"
hybrid-array = "0.4"
k256 = { version = "0.14.0-pre.10" }
maybe-owned = "0.3"
rand = "0.9"
rangemap = "1.6"
rsa = "0.10.0-rc.6"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.14"
sha2 = "0.11.0-rc.2"
sha3 = "0.11.0-rc.3"
signature = "3.0.0-rc.3"
thiserror = "2"
tokio = "1.47"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
uuid = "1"
zeroize = "1.8"


#[patch.crates-io]
#block-buffer = { git = "https://github.com/RustCrypto/utils.git", rev = "303c9e8e8fd5e08de4719bd6614935bc68c63a55" }
#cipher = { git = "https://github.com/RustCrypto/traits.git", rev = "b93df4aabac35b714fbcdf3ea951803ee8b00e56" }
#crypto-bigint = { git = "https://github.com/RustCrypto/crypto-bigint.git", rev = "732300c947ac92a03368afb74a4f699931f55cd5" }
#ed25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", rev = "44433757a07c68a2b4f453c25d69469ae2f62986" }
#elliptic-curve = { git = "https://github.com/RustCrypto/traits.git", rev = "b93df4aabac35b714fbcdf3ea951803ee8b00e56" }