[workspace]
resolver = "3"
members = ["ario-core", "ario-client", "arfs", "ars3nal", "foyer-cache"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[workspace.dependencies]
ario-client = { path = "ario-client" }
ario-core = { path = "ario-core" }
arfs = { path = "arfs" }
ars3nal = { path = "ars3nal" }
foyer-cache = { path = "foyer-cache" }

aes = "0.9.0-rc.1"
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
bon = "3.7"
bytes = "1"
bytemuck = "1.24"
bytesize = "2.0"
chrono = "0.4"
ctr = { version = "0.10.0-rc.1" }
ct-codecs = "1.1"
derive-where = "1.6"
derive_more = "2.0"
digest = "0.11.0-rc.1"
ecdsa = "0.17.0-rc.6"
ed25519 = "3.0.0-rc.0"
ed25519-dalek = "3.0.0-pre.1"
elliptic-curve = "0.14.0-rc.13"
futures-lite = "2.6"
ghash = "0.6.0-rc.2"
hkdf = "0.13.0-rc.1"
hybrid-array = "0.4"
k256 = { version = "0.14.0-pre.10" }
maybe-owned = "0.3"
moka = "0.12"
rand = "0.9"
rangemap = "1.6"
rsa = "0.10.0-rc.6"
s3s = "0.12.0-rc.3"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.14"
sha2 = "0.11.0-rc.2"
sha3 = "0.11.0-rc.3"
signature = "3.0.0-rc.3"
thiserror = "2"
tokio = "1.47"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
uuid = "1"
zeroize = "1.8"

[patch.crates-io]
s3s = { git = "https://github.com/rrauch/s3s", branch = "upgrade-sha-hmac-deps" }