[package]
name = "arfs"
version = "0.1.0"
edition = "2024"

[dependencies]
ario-client = { workspace = true }
ario-core = { workspace = true }

async-stream = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
derive-where = { workspace = true }
futures-lite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11"
serde-content = { version = "0.1", features = ["default"] }
serde_json = { workspace = true }
serde_sqlite_jsonb = "0.2"
serde_with = { workspace = true, features = ["chrono"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typed-path = "0.11"
uuid = { workspace = true, features = ["v4"] }
zeroize = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
dotenv = "0.15"
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
anyhow = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
tokio = { workspace = true, features = ["full"] }