[package]
name = "ario-client"
version = "0.1.0"
edition = "2024"

[dependencies]
ario-core = { path = "../ario-core" }
async-stream = "0.3"
bon = { workspace = true }
buf-list = "1.0"
bytes = { workspace = true }
bytesize = { workspace = true }
derive_more = { version = "2.0", features = ["full"] }
derive-where = { workspace = true }
futures-concurrency = "7.6"
futures-lite = { workspace = true }
itertools = "0.14"
maybe-owned = { workspace = true }
n0-watcher = "0.3"
netwatch = "0.8"
rand = { workspace = true, features = ["thread_rng"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with = { workspace = true, features = ["base64"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
tokio-util = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
anyhow = "1"
dotenv = "0.15"
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["compat"] }