[package]
name = "ario-client"
version = "0.1.0"
edition = "2024"

[features]
graphql = ["dep:cynic"]
graphql-codegen = ["dep:cynic-codegen", "graphql"]

[dependencies]
ario-core = { path = "../ario-core" }
async-stream = "0.3"
bon = { workspace = true }
buf-list = "1.0"
bytes = { workspace = true }
bytesize = { workspace = true }
cynic = { version = "3", optional = true }
cynic-codegen = { version = "3", optional = true }
derive_more = { workspace = true, features = ["full"] }
derive-where = { workspace = true }
futures-concurrency = "7.6"
futures-lite = { workspace = true }
itertools = "0.14"
maybe-owned = { workspace = true }
n0-watcher = "0.3"
netwatch = "0.8"
rand = { workspace = true, features = ["thread_rng"] }
rangemap = { workspace = true }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with = { workspace = true, features = ["base64"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
tokio-util = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]
anyhow = { workspace = true }
dotenv = "0.15"
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["compat"] }

[build-dependencies]
cynic-codegen = { version = "3" }