[package]
name = "ario-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = { workspace = true, features = ["zeroize"] }
anyhow = { workspace = true }
bigdecimal = { version = "0.4", features = ["serde-json"] }
bip32 = { version = "0.5", features = ["k256"] }
bip39 = { version = "2.2", features = ["zeroize"] }
bon = { workspace = true }
bytemuck = { version = "1.23", features = ["derive"] }
bytes = { workspace = true }
circular-buffer = "1.1"
ct-codecs = "1.1"
ctr = { workspace = true, features = ["alloc", "zeroize", "block-padding"] }
derive-where = { workspace = true, features = ["zeroize"] }
digest = { workspace = true }
ecdsa = { workspace = true }
ed25519-dalek = { workspace = true }
elliptic-curve = { workspace = true }
futures-lite = { workspace = true, features = ["futures-io"] }
ghash = { workspace = true, features = ["zeroize"] }
hkdf = { workspace = true }
hybrid-array = { workspace = true, features = ["serde", "zeroize", "bytemuck"] }
itertools = "0.14"
k256 = { workspace = true }
maybe-async = "0.2"
maybe-owned = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
rand_chacha = { version = "0.9", features = ["std"] }
rangemap = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_avro_fast = "2.0"
serde_json = { workspace = true, features = ["preserve_order"] }
serde_repr = "0.1"
serde_with = { workspace = true, features = ["base64"] }
signature = { workspace = true }
sha2 = { workspace = true, features = ["oid"] }
sha3 = { workspace = true }
subtle = "2.6"
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
zeroize = { workspace = true, features = ["derive", "serde"] }

[dev-dependencies]
hex-literal = "1"
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["compat"] }