[package]
name = "ars3nal"
version = "0.1.0"
edition = "2024"

[dependencies]
ario-client = { workspace = true }
ario-core = { workspace = true }
arfs = { workspace = true }
foyer-cache = { workspace = true }

anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
axum = "0.8"
bon = { workspace = true }
const-str = "0.7"
futures-lite = { workspace = true }
http = "1.3"
hyper-util = { version = "0.1", features = ["server-auto", "server-graceful", "http1", "http2", "tokio"] }
itertools = "0.14"
s3s = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["compat"] }
tower = "0.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
dotenv = "0.15"
tokio = { workspace = true, features = ["full"] }