[package]
name = "ars3nal"
version = "0.1.0"
edition = "2024"

[dependencies]
ario-client = { workspace = true }
ario-core = { workspace = true }
arfs = { workspace = true }
foyer-cache = { workspace = true }

anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
axum = "0.8"
bon = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
const-str = "0.7"
futures-lite = { workspace = true }
http = "1.3"
hyper-util = { version = "0.1", features = ["server-auto", "server-graceful", "http1", "http2", "tokio"] }
itertools = "0.14"
s3s = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["compat"] }
toml = { version = "0.9", features = ["preserve_order", "display"] }
tower = "0.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"

[dev-dependencies]
dotenv = "0.15"
tokio = { workspace = true, features = ["full"] }