[package]
name = "foyer-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
ario-client = { workspace = true }
ario-core = { workspace = true }

ahash = "0.8"
foyer = { version = "0.19", features = ["default"] }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
anyhow = { workspace = true }
dotenv = "0.15"
futures-lite = { workspace = true }
hex-literal = "1"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }