[package]
name = "foyer-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
ario-client = { workspace = true }
ario-core = { workspace = true }

blocking = "1.6"
foyer = { version = "0.20", features = ["default", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
dotenv = "0.15"
futures-lite = { workspace = true }
hex-literal = "1"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }