[package]
name = "foyer-cache"
version = "0.1.1"
edition = "2024"

[dependencies]
ario-client = { workspace = true }
ario-core = { workspace = true }

blocking = { workspace = true }
bon = { workspace = true }
equivalent = "1"
foyer = { git = "https://github.com/rrauch/foyer.git", branch = "storage_load_non_static_key", features = ["default", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
dotenv = "0.15"
futures-lite = { workspace = true }
hex-literal = "1"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }